# task-manager-python-capstone

./: README.md  project_context.md  pyproject.toml  tasks.db
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: categories.py
